main_wayland.cpp
@@ -197,7 +197,7 @@ void ApplicationWayland::continueStartupWithX()
             environment.insert(QStringLiteral("QT_QPA_PLATFORM"), QStringLiteral("wayland"));
             environment.remove("DISPLAY");
             environment.remove("WAYLAND_DISPLAY");
-            QProcess *p = new QProcess(this);
+            QProcess *p = new Process(this);
             p->setProcessChannelMode(QProcess::ForwardedErrorChannel);
             auto finishedSignal = static_cast<void (QProcess::*)(int, QProcess::ExitStatus)>(&QProcess::finished);
             connect(p, finishedSignal, this,
@@ -217,7 +217,7 @@ void ApplicationWayland::continueStartupWithX()
     m_environment.insert(QStringLiteral("DISPLAY"), QString::fromUtf8(qgetenv("DISPLAY")));
     // start session
     if (!m_sessionArgument.isEmpty()) {
-        QProcess *p = new QProcess(this);
+        QProcess *p = new Process(this);
         p->setProcessChannelMode(QProcess::ForwardedErrorChannel);
         p->setProcessEnvironment(m_environment);
         auto finishedSignal = static_cast<void (QProcess::*)(int, QProcess::ExitStatus)>(&QProcess::finished);
@@ -229,7 +229,7 @@ void ApplicationWayland::continueStartupWithX()
         for (const QString &application: m_applicationsToStart) {
             // note: this will kill the started process when we exit
             // this is going to happen anyway as we are the wayland and X server the app connects to
-            QProcess *p = new QProcess(this);
+            QProcess *p = new Process(this);
             p->setProcessChannelMode(QProcess::ForwardedErrorChannel);
             p->setProcessEnvironment(m_environment);
             p->start(application);
@@ -299,7 +299,7 @@ void ApplicationWayland::startXwaylandServer()
 
     m_xcbConnectionFd = sx[0];
 
-    m_xwaylandProcess = new QProcess(kwinApp());
+    m_xwaylandProcess = new Process(kwinApp());
     m_xwaylandProcess->setProcessChannelMode(QProcess::ForwardedErrorChannel);
     m_xwaylandProcess->setProgram(QStringLiteral("Xwayland"));
     QProcessEnvironment env = m_environment;
